tests/typing/bad/testfile-affect-2.jl
mutable struct MyStruct a :: Int64 end
x = MyStruct(2)
x.a = true
